# crossgate-rs

./: .env  Cargo.toml  README.md
micro/: Cargo.toml
micro/src/: lba.rs  lib.rs  register.rs
micro/src/api/: mod.rs
micro/src/task/: mod.rs
micro/src/web/: mod.rs
net/: Cargo.toml
net/src/: lib.rs
net/src/http/: mod.rs  proxy.rs
net/src/tcp/: connection.rs  frame.rs  handler.rs  listener.rs  mod.rs  server.rs
plugin/: Cargo.toml
plugin/src/: consul.rs  etcd.rs  lib.rs  mdns_plugin.rs  mongo.rs  none.rs
src/: lib.rs
