[package]
name = "micro"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
futures = "0.3"
hyper = "0.14"
log = "0.4"
once_cell = "1"
rand = "0.8"
serde = "1.0"
serde_json = "1.0"
local-ip-address = "0.5.1"
dotenv = "0.15.0"
tokio-context = "0.1.3"
crossbeam = "0.8"
anyhow = "1.0"
thiserror = "1.0"


[dependencies.plugin]
path = '../plugin'

[dependencies.net]
path = '../net'
