[package]
name = "net"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3"
tokio = {version="1",futures="full"}
lazy_static = "1.4"
bytes = "1"
async-trait = "0.1"
log = "0.4"
tokio-stream = "0.1"
hyper = { version = "0.14", features = ["full"] }
tower-http = { version = "0.3.0", features = ["fs", "trace"] }
axum = {version = "0.5", features = ["headers"]}
headers = "0.3"
crossbeam = "0.8"