[package]
name = "plugin"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = "1"
tokio-context = "0.1.3"
serde = "1.0"
lazy_static = "1.0"
# etcd-client = "0.10"
async-trait = "0.1"
crossbeam = "0.8"
anyhow = "1.0"
thiserror = "1.0"
serde_json = "1.0"

futures = "0.3"
log = "0.4"
mdns = "3.0"
mongodb = "2"
dotenv = "0.15.0"
once_cell = "1"

etcd-client = "0.12"

# consul = "0.4.2"
rs-consul = "0.5.0"
url = "2.5.0"
